asg/tests/fail/array/multi_fail_inline.leo
function main() {
    const arr: [u8; (2, 2)] = [[1u8, 1u8],
                                  [1u8]];   // incorrect dimensions
}